fix: Prevent badge text from wrapping (#810)

--- a/src/badge/badge.module.css
+++ b/src/badge/badge.module.css
@@ -25,6 +25,7 @@
     color: var(--reactist-badge-tint);
     background-color: var(--reactist-badge-fill);
     line-height: calc(var(--reactist-badge-font-size) + 3px);
+    white-space: nowrap;
 }
 
 .badge-info {
